k8s/billing-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-management
  template:
    metadata:
      labels:
        app: billing-management
    spec:
      containers:
      - name: billing-management
        image: hani016/medical-records-management-system:billing-management
        ports:
        - containerPort: 8083
