k8s/medical-records-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-records-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medical-records-management
  template:
    metadata:
      labels:
        app: medical-records-management
    spec:
      containers:
      - name: medical-records-management
        image: hani016/medical-records-management-system:medical-records-management
        ports:
        - containerPort: 8082
