k8s/notification-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-management
  template:
    metadata:
      labels:
        app: notification-management
    spec:
      containers:
      - name: notification-management
        image: hani016/medical-records-management-system-notification-management
        ports:
        - containerPort: 8084
