k8s/user-profile-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-profile-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-profile-management
  template:
    metadata:
      labels:
        app: user-profile-management
    spec:
      containers:
      - name: user-profile-management
        image: hani016/medical-records-management-system:user-profile-management
        ports:
        - containerPort: 8081
