k8s/billing-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-management
spec:
  type: ClusterIP
  selector:
    app: billing-management
  ports:
    - port: 8083
      targetPort: 8083
