k8s/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: default
spec:
  type: NodePort
  selector:
    app: eureka-server
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30761 # Port corrigé dans la plage valide
