k8s/medical-records-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-records-management
spec:
  type: ClusterIP
  selector:
    app: medical-records-management
  ports:
    - port: 8082
      targetPort: 8082
