k8s/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
spec:
  selector:
    app: node-exporter  # doit correspondre au label du pod
  ports:
    - protocol: TCP
      port: 9100
      targetPort: 9100
