k8s/notification-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-management
spec:
  type: ClusterIP
  selector:
    app: notification-management
  ports:
    - port: 8084
      targetPort: 8084
