k8s/user-profile-management-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-profile-management
spec:
  type: ClusterIP
  selector:
    app: user-profile-management
  ports:
    - port: 8081
      targetPort: 8081
